add logic to handle item drops on mob death

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,10 @@ micronaut:
       expire-after-write: 60s # Local cache expiration
       maximum-size: 1000
       cache-type: caffeine
+    itemCache:
+      expire-after-write: 360s
+      maximum-size: 1000
+      cache-type: caffeine
 
 jackson:
   serialization:
