--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,9 +58,13 @@ services:
       KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_LOG_RETENTION_HOURS: 1
-      KAFKA_NUM_PARTITIONS: 2
+      KAFKA_NUM_PARTITIONS: 3
       #     https://github.com/robcowart/docker_compose_cookbook/blob/master/confluent_kafka_oss/docker-compose.yml
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MAX_CONNECTIONS: 1000
+      KAFKA_NUM_NETWORK_THREADS: 16
+      KAFKA_NUM_IO_THREADS: 16
+      KAFKA_QUEUED_MAX_REQUESTS: 500
     volumes:
       - ./configs:/etc/kafka/configs
     restart: always
