--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -53,3 +53,4 @@ mongo-database:
   actor-skills: "actorSkills"
   actionbar: "actionbar"
   actorThreat: "actorThreat"
+  actorTalents: "actorTalents"
